# voice_2_image

./: .gitignore  README.md  pyproject.toml
assets/clip-vit-large-patch14/: tokenizer_config.json
assets/fugumt-ja-en/: config.json  tokenizer_config.json
assets/stable-diffusion-v1-4-openvino/: text_encoder.xml  unet.xml  vae_decoder.xml  vae_encoder.xml
src/stable_diffusion/: front.py  front.ui  main.py  stable_diffusion_engine.py
