[project]
name = "stable_diffusion"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "PyQt5-Qt5 ==5.15.2",
    "pyqt5 ==5.15.11",
    "qt5-tools ==5.15.2.1.3",
    "vosk ==0.3.45",
    "PyAudio ==0.2.14",
    "numpy ==1.24.4",
    "opencv-python ==4.10.0.84",
    "transformers==4.16.2",
    "diffusers ==0.2.4",
    "tqdm ==4.64.0",
    "openvino==2024.5.0",
    "huggingface_hub ==0.9.0",
    "streamlit ==1.12.0",
    "watchdog ==2.1.9",
    "ftfy ==6.1.1",
    "streamlit_drawable_canvas ==0.9.1",
    "pillow ==11.1.0",
    "piexif ==1.1.3",
    "scipy ==1.15.1",
    "sentencepiece ==0.2.0",
    "torch ==2.5.1",
]

[project.scripts]
stable_diffusion = "stable_diffusion.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stable_diffusion"]
